// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders ResetLink 1`] = `
<a
  class="css-1ez2pc8"
  href="http://google.com"
  rel="noopener"
  target="_blank"
>
  Link
</a>
`;

exports[`Link renders default 1`] = `
<a
  class="css-1gv1zvs"
  href="http://google.com"
  rel="noopener"
  target="_blank"
>
  Link
</a>
`;
